--- a/caching/lru_cache.ipynb
+++ b/caching/lru_cache.ipynb
@@ -265,6 +265,9 @@
     "\n",
     "class LRUCache:\n",
     "    def __init__(self, capacity):\n",
+    "        \"\"\"\n",
+    "        :type capacity: int\n",
+    "        \"\"\"\n",
     "        self.capacity = capacity\n",
     "        self.dic = dict()\n",
     "        # a neat trick where the cache object itself keeps track of the\n",
@@ -299,6 +302,10 @@
     "    # when you access a key, you need to move that node to the front\n",
     "    # so it will not be deleted soon\n",
     "    def get(self, key):\n",
+    "        \"\"\"\n",
+    "        :type key: int\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
     "        # first check if the key even exists!\n",
     "        if key in self.dic:\n",
     "            # if it was found, get a pointer to the correct node from the dict\n",
@@ -315,6 +322,11 @@
     "\n",
     "    # When you put a new value in, you also move it to the front of the list\n",
     "    def put(self, key, value):\n",
+    "        \"\"\"\n",
+    "        :type key: int\n",
+    "        :type value: int\n",
+    "        :rtype: None\n",
+    "        \"\"\"\n",
     "        # if the value was already found\n",
     "        if key in self.dic:\n",
     "            # we want to remove links to the node that currenly holds its value\n",
